swag modify
